--- a/.gitignore
+++ b/.gitignore
@@ -362,3 +362,5 @@ MigrationBackup/
 # Fody - auto-generated XML schema
 FodyWeavers.xsd
 .azure
+/TheWag.AppHost/appsettings.Development.json
+/TheWag.AppHost/infra
