--- a/TheWag.AppHost/appsettings.json
+++ b/TheWag.AppHost/appsettings.json
@@ -1,9 +1,16 @@
 {
-  "Logging": {
-    "LogLevel": {
-      "Default": "Information",
-      "Microsoft.AspNetCore": "Warning",
-      "Aspire.Hosting.Dcp": "Warning"
+    "Logging": {
+        "LogLevel": {
+            "Default": "Information",
+            "Microsoft.AspNetCore": "Warning",
+            "Aspire.Hosting.Dcp": "Warning"
+        }
+    },
+    "Parameters": {
+        "visionendpoint": "secret",
+        "visionkey": "secret",
+    },
+    "ConnectionStrings": {
+        "blobs": "https://thewagstorage.blob.core.windows.net/"
     }
-  }
 }
