Hooked up the database api to the front end and tarted to work on EF/DB conectivity

--- a/TheWag.ApiService/TheWag.Api.WagDB.csproj
+++ b/TheWag.ApiService/TheWag.Api.WagDB.csproj
@@ -4,13 +4,16 @@
     <TargetFramework>net9.0</TargetFramework>
     <ImplicitUsings>enable</ImplicitUsings>
     <Nullable>enable</Nullable>
+    <UserSecretsId>c56f7ef8-fa60-46ba-a5ea-7b81029304a1</UserSecretsId>
   </PropertyGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\TheWag.Models\TheWag.Models.csproj" />
     <ProjectReference Include="..\TheWag.ServiceDefaults\TheWag.ServiceDefaults.csproj" />
   </ItemGroup>
 
   <ItemGroup>
+    <PackageReference Include="Aspire.Microsoft.EntityFrameworkCore.SqlServer" Version="9.1.0" />
     <PackageReference Include="Microsoft.AspNetCore.OpenApi" Version="9.0.0" />
   </ItemGroup>
 
