--- a/TheWag.AppHost/appsettings.json
+++ b/TheWag.AppHost/appsettings.json
@@ -6,11 +6,8 @@
             "Aspire.Hosting.Dcp": "Warning"
         }
     },
-    "Parameters": {
-        "visionendpoint": "secret",
-        "visionkey": "secret",
-    },
     "ConnectionStrings": {
-        "blobs": "https://thewagstorage.blob.core.windows.net/"
+        "blobs": "https://thewagstorage.blob.core.windows.net/",
+        "wagdb": "Server=tcp:wagsqlserver.database.windows.net,1433;Initial Catalog=WagDB;Encrypt=True;TrustServerCertificate=False;Connection Timeout=30;Authentication='Active Directory Default'"
     }
 }
