--- a/TheWag.Data/TheWag.Data.csproj
+++ b/TheWag.Data/TheWag.Data.csproj
@@ -7,6 +7,10 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Aspire.Microsoft.EntityFrameworkCore.SqlServer" Version="9.1.0" />
+  </ItemGroup>
+
+  <ItemGroup>
     <ProjectReference Include="..\TheWag.Models\TheWag.Models.csproj" />
   </ItemGroup>
 
