Add product post and EF/automapper work dev now connects to localy hosted blob

--- a/TheWag.Web/TheWag.Web.csproj
+++ b/TheWag.Web/TheWag.Web.csproj
@@ -8,7 +8,7 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\TheWag.Data\TheWag.Data.csproj" />
+    <ProjectReference Include="..\TheWag.Models\TheWag.Models.csproj" />
     <ProjectReference Include="..\TheWag.ServiceDefaults\TheWag.ServiceDefaults.csproj" />
     <ProjectReference Include="..\Util.Azure.ComputerVisionClient\Util.Azure.ComputerVision.csproj" />
   </ItemGroup>
